<resources>
    <string name="app_name">Athena Productivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">User</string>
    <string name="nav_header_email">example@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_notes">Notes</string>

    <string name="task">Your tasks for</string>
    <string name="add_task">+ ADD TASK</string>

    <string name="sign_out_button">Sign Out </string>
    <string name="password">"   Password"</string>
    <string name="email">"   Email"</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_in_button"><u>Sign In</u></string>
    <string name="sign_up_button"><u>Sign Up</u></string>
    <string name="user_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>