<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cs_topics_project_test.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!--adding fragment (calendar code and functionality) to side panel; works closely with main/activity_main_drawer.xml-->
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.cs_topics_project_test.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <!---<activity
        android:id="@+id/nav_tasks"
        android:name="com.example.cs_topics_project_test.task.TaskView"
        android:label="@string/menu_tasks"
        tools:layout="@layout/activity_task" />-->
    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.cs_topics_project_test.task.TaskFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_task_upgrade" />
</navigation>